feat: add endpoint to send email
